tests/hulk/ok/minimal/block_value.hulk
let result = {
    let a = 3 in
    let b = 4 in
        a + b;
} in
    if (result == 7) print("ok") else print("fail");
