tests/hulk/errors/lexical/bad_string.hulk
let x = "unterminated
in print(x);
